# tubepilot

./: .gitignore  .vercelignore  DESIGN.md  PRODUCT.md  README.md  package.json  pnpm-lock.yaml  vercel.json
.claude/: launch.json
.claude/skills/: fix-commit.md
.github/workflows/: build.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/sidecar/: main.py  test_pipeline.py
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/editor/[id]/: editor-page.tsx  page.tsx
apps/web/app/publish/[id]/: page.tsx  publish-page.tsx
apps/web/app/settings/: page.tsx
apps/web/lib/: i18n.ts  settings-context.tsx  tauri-api.ts
scripts/: build-desktop.sh  clean.mjs
