[package]
name = "tubepilot"
version = "0.1.0"
description = "TubePilot desktop app"
authors = []
edition = "2021"

[lib]
name = "tubepilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
qrcode = "0.14"
tauri-plugin-dialog = "2"
dirs = "5"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
